data/derived/fa15/progs/unify/prog0972.ml.out
Characters 26-27:
  let _ = removeDuplicates [1;6;2;4;12;2;13;6;9];;
                            ^
Error: This expression has type int but an expression was expected of type
         'a list
